crates/shep-cli/src/lookout/snapshots/shep__lookout__frames__tests__filter_editing.snap
---
source: crates/shep-cli/src/lookout/frames.rs
expression: render_text(&buffer)
---
shep lookout   /home/ada/.shep                                                   2 of 6 in the flock
host  load  ██░░░░░░░░ 2.31 4.10 3.88 / 10 cores     host mem  ████░░░░░░ 12.4G / 32.0G     0 error…
────────────────────────────────────────────────────────────────────────────────────────────────────
  ID    NAME               STATUS           PID      RESTARTS  EXIT       CPU     MEM       UPTIME  
   ██ FLOCK                                                                                         
  0     web                online           48211    0         -          -       182.0M    1h 25m  
  1     web                online           48212    0         -          -       178.0M    1h 26m  
                                                                                                    
                                                                                                    
                                                                                                    
                                                                                                    
                                                                                                    
                                                                                                    
filter  web▏   enter applies   esc cancels   ctrl-c quits                            control enabled
